test/statements/foreach/constIntent.chpl
var c = 42; 

foreach i in 0..0 with (const c) do writeln(c);
foreach i in 0..0 with (const c) do c = 1;
